corpus/macros.txt
==============================================================================
VALID - single include macro
==============================================================================

#include "path/to/file.vsif"

------------------------------------------------------------------------------

(document
  (macro
    (path)))

==============================================================================
VALID - single conditionnal macro
==============================================================================

#ifdef EXTERNAL_VALUE
#endif

------------------------------------------------------------------------------

(document
  (macro
    (condition)))

==============================================================================
VALID - nested conditionnal macros
==============================================================================

#ifdef EXTERNAL_VALUE
#ifndef OTHER_VALUE
#endif
#endif

------------------------------------------------------------------------------

(document
  (macro
    (condition)
    (macro
      (condition))))

==============================================================================
VALID - mixed macros
==============================================================================

#ifdef EXTERNAL_VALUE
  #include "yet/an/other/file.vsif"
#endif

------------------------------------------------------------------------------

(document
  (macro
    (condition)
    (macro
      (path))))
