corpus/pairs.txt
==============================================================================
VALID - single string pair
==============================================================================

key : "value";

------------------------------------------------------------------------------

(document
  (pair
    (key)
    (string)))

==============================================================================
VALID - multiline string pair
==============================================================================

key : <text>this is a
multiline text</text>;

------------------------------------------------------------------------------

(document
  (pair
    (key)
    (string)))

==============================================================================
VALID - single integer pair
==============================================================================

key : 42;

------------------------------------------------------------------------------

(document
  (pair
    (key)
    (integer)))

==============================================================================
VALID - mixed pairs
==============================================================================

key_integer : 42;
key_bare_string : value;
key_quoted_string : "value with spaces";
key_tagged_string : <text>this is some text</text>;

------------------------------------------------------------------------------

(document
  (pair
    (key)
    (integer))
  (pair
    (key)
    (string))
  (pair
    (key)
    (string))
  (pair
    (key)
    (string)))
